--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,25 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Output
+.output
+.netlify
+.wrangler
+/.svelte-kit
+/dist
+
+# OS
+Thumbs.db
+
+# Env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+
+*storybook.log
+storybook-static
