--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,20 +1,20 @@
-version: '3'
+version: "3"
 
 vars:
-  BINARY_NAME: beLLMan
+  BINARY_NAME: beLLMan_backend
 
-dotenv: ['.env']
+dotenv: [".env"]
 
 tasks:
   build:
     cmds:
-      - go build -o .bin/{{.BINARY_NAME}}
-  
-  run: 
+      - go build -C cmd/app -o ../../.bin/{{.BINARY_NAME}}
+
+  run:
     cmds:
       - task: build
       - ./.bin/{{.BINARY_NAME}}
-  
+
   test:
     cmds:
       - task: build
