add postgres service

--- a/sample.env
+++ b/sample.env
@@ -1,1 +1,8 @@
 CORS_ALLOWED_SINGLE_ORIGIN="http://localhost:5173"
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=changeMe
+POSTGRES_DB=postgres
+POSTGRES_SSL_MODE=disable
+LOCAL_POSTRES_PORT=5432
+POSTGRES_PORT=${LOCAL_POSTRES_PORT}
